--- a/Serene/Serene.Web/Content/site/site.theme.less
+++ b/Serene/Serene.Web/Content/site/site.theme.less
@@ -48,6 +48,7 @@ body {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 13px;
     color: #000;
+    -ms-overflow-style: scrollbar;
 }
 
 .ui-front {
